@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-22T16:19:13Z",
-  "count" : 2,
-  "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
+  "timestamp" : "2022-07-23T01:04:51Z",
+  "count" : 3,
+  "count_minmax" : [ 1, 3 ],
+  "count_decinc" : [ -0, +3 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
