@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-22T16:19:13Z",
-  "count_outdated" : 406,
-  "uniques_outdated" : 220,
-  "count" : 430,
+  "timestamp" : "2022-07-23T01:04:51Z",
+  "count_outdated" : 408,
+  "uniques_outdated" : 221,
+  "count" : 432,
   "uniques" : 233,
   "clones" : [
-    {
-      "timestamp": "2022-07-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-09T00:00:00Z",
       "count": 2,
@@ -77,8 +70,8 @@
     },
     {
       "timestamp": "2022-07-22T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
