@@ -3,11 +3,6 @@
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2022-07-08T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-07-09T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -54,7 +49,7 @@
     },
     {
       "timestamp": "2022-07-22T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 1
     }
   ]
